[package]
name = "algolia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vtex = { path = "../lib"}
clap = "2.34.0"
csv = "1.1"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.19"
log = "0.4.14"
rand = "0.8.4"
reqwest = { version = "0.11.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.59"
tokio = { version = "1", features = ["full"] }
tokio-threadpool = "0.1.18"
tower = { version = "0.4.11", features = ["full"] }