[package]
name = "vtex_impex"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vtex = { path = "../vtex"}
anyhow = "1.0.57"
clap = "2.34.0"
csv = "1.1"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"
futures = "0.3.19"
governor = "0.4.0"
nonzero_ext = "0.3.0"
regex = "1.0"
reqwest = { version = "0.11.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.59"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "vtex_impex"
path = "src/main.rs"