[package]
name = "transform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vtex = { path = "../lib"}
clap = "2.34.0"
csv = "1.1"
dotenv = "0.15.0"
regex = "1.0"
reqwest = { version = "0.11.7", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.59"
